<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.colman.dreamcatcher.view.LoginFragment"
        android:label="LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.colman.dreamcatcher.view.RegisterFragment"
        android:label="RegisterFragment">
        <action
            android:id="@+id/action_registerFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.colman.dreamcatcher.view.FeedFragment"
        android:label="@string/nav_feed" />

    <fragment
        android:id="@+id/createDreamFragment"
        android:name="com.colman.dreamcatcher.view.CreateDreamFragment"
        android:label="@string/nav_create">
        <action
            android:id="@+id/action_createDreamFragment_to_journalFragment"
            app:destination="@id/journalFragment"
            app:popUpTo="@id/createDreamFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/journalFragment"
        android:name="com.colman.dreamcatcher.view.JournalFragment"
        android:label="@string/nav_journal">
        <action
            android:id="@+id/action_journalFragment_to_editDreamFragment"
            app:destination="@id/editDreamFragment" />
    </fragment>

    <fragment
        android:id="@+id/editDreamFragment"
        android:name="com.colman.dreamcatcher.view.EditDreamFragment"
        android:label="@string/edit">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.colman.dreamcatcher.view.ProfileFragment"
        android:label="@string/nav_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <action
        android:id="@+id/action_global_to_createDreamFragment"
        app:destination="@id/createDreamFragment" />

</navigation>
